--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,7 +15,7 @@ body {
   h2,
   h3,
   h4,
-  h5 {
+  h5, .font-heading {
     font-family: var(--font-wild);
     /* @apply("font-[family-name:var(--font-wild)]") */
   }
