--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,6 +3,7 @@
 @tailwind utilities;
 
 body {
+  @apply bg-slate-900;
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -10,7 +11,7 @@ body {
   .text-balance {
     text-wrap: balance;
   }
-  
+
   h1,
   h2,
   h3,
